<resources>
    <string name="app_name">GPSTracker</string>
    <string name="turn_location_on_toast">Please turn on location services!</string>
    <string name="email_edit_text_hint">Your e-mail e.g. new@new.com</string>
    <string name="password_edit_text_hint">Your password e.g. pass123</string>
    <string name="login_button_text">Attempt to login</string>
    <string name="main_fragment_welcome_text_view_text">Track as an existing user, or create a new one!</string>
    <string name="main_fragment_login_button_text">Log in as an existing user</string>
    <string name="main_fragment_register_button">Register a new user</string>
    <string name="register_fragment_button_text">Register</string>
    <string name="failed_login_error_message">Invalid email and/or password!</string>
    <string name="username_taken_error_message">Username already taken! Please choose another.</string>
    <string name="successful_registration_toast">Registration successful!</string>
    <string name="registration_failed_error_message">Request failed, check if your email is valid!</string>
    <string name="start_new_session_or_browse_previous_text_view_message">Start a new tracking session, or browse previous ones!</string>
    <string name="start_tracking_button_text_message">Start a new tracking session!</string>
    <string name="new_session_edit_text_hint_message">e.g. MySession</string>
    <string name="username_edit_text_hint">e.g. username</string>
    <string name="continue_button_text">Continue with registration</string>
    <string name="session_already_exists_error_message">Session already exists!</string>
    <string name="dialog_message">"Do you want to delete: %1$s"</string>
    <string name="dialog_positive_button_text">Yes</string>
    <string name="dialog_negative_button_text">Go back!</string>
    <string name="tracking_started_toast_message">Tracking started!</string>
    <string name="tracking_stopped_toast_message">Tracking stopped!</string>
    <string name="stats_alert_dialog_neutral_button_message">Awesome!</string>
    <string name="previous_sessions_menu_item">Previous Sessions</string>
    <string name="new_session_menu_item">New session</string>
    <string name="session_stats_menu_item">Session stats</string>
    <string name="start_a_new_session_fragment_title">Start a new session!</string>
    <string name="username_fragment_text_view_message">Choose a username to represent you.</string>
    <string name="account_fragment_text_view_message">Choose your account details, and write them down!</string>
    <string name="choose_a_username_toolbar_title">Choose a username</string>
    <string name="choose_your_account_details_toolbar_title">Choose your account details</string>
    <string name="login_activity_toolbar_title">Log in!</string>
    <string name="main_activity_toolbar_title_message">Welcome to GPSTracking!</string>
    <string name="username_fragment_empty_field_error_message">Username should not be empty!</string>
    <string name="session_name_empty_error_message">Session name cannot be empty!</string>
    <string name="tracking_stopped_dialog_message">Distance passed: %1$f m , time elapsed: %2$d s , average speed: %3$f km/h .</string>
    <string name="stats_session_name_text_view_message">"Session name: %1$s ."</string>
    <string name="stats_time_elapsed_text_view_message">"Time elapsed: %1$d s."</string>
    <string name="stats_distance_traversed_text_view_message">"Distance traversed: %1$f m."</string>
</resources>
